An attempt to fix building Railcraft...
Still doesn't build bececause the "http://maven.ic2.player.to" maven repo
is down and using the Internet Archive also doesn't work...

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         mavenCentral()
         maven {
             name = "forge"
-            url = "http://files.minecraftforge.net/maven"
+            url = "https://maven.minecraftforge.net"
         }
         maven {
             name = "sonatype"
@@ -15,7 +15,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath 'com.anatawa12.forge:ForgeGradle:2.3-1.0.8'
     }
 }
 
@@ -167,7 +167,8 @@ repositories {
     }
     maven {
         name = "ic2"
-        url = "http://maven.ic2.player.to/"
+//         url = "https://maven.cil.li/"
+        url = "https://web.archive.org/web/20230324164244/https://maven.ic2.player.to/"
     }
     maven {
         name = "jei"
